@@ -1,0 +1,1 @@
+A simple dungeon generator that uses Dijkstra's algorithm for finding the shortest path to the player from any point in the dungeon. The generator will create a series of roooms and corridors linking the rooms as well as placing monsters within the dungeon rooms, but not, if possible, in the same room as the player. Monsters utilize behaviours defined as four specific traits that have a 50% chance to be held by any given monster, bar the player. The player in this assignment is defined as moving erratically for the purposes of lacking user input control. Additionally, for clarification, the dungeon state is printed every player move as well as at the point of game loss to show the last move made even if it was not performed by the player such that the dungeon state is understood.
