@@ -2,4 +2,7 @@
 09/29 07:02pm: Accounted for tunneling and erratic behaviour ;; re-wrote move logic
 09/29 08:41pm: Fixed a seg fault related to defaults being called (a feature)
 09/30 12:05am: Got turns working properly ;; cut out a lot of cruft code
+10/01 11:45pm: Functional monsters and killing/game over/win implemented ;; some clean up may be done
+10/03 10:00pm: Fixed an odd segfault bug and removed monsters being added to the player's room, if possible
+10/03 10:50pm: Fixed another segfault/movement bug with intelligent + telepathic type monsters ;; ensured monsters who can't tunnel don't spawn outside of of a room
 
